# server

./: .gitignore  CMakeLists.txt  PreLoad.cmake  config.h.cmake  createprojects.bat  revision.h.cmake
cmake/: CompilerFlags.cmake  Dependencies.cmake  FindTBB.cmake  ImportTBB.cmake  Options.cmake  PCH.cmake  Platform.cmake  Prefix.cmake  PrintConfig.cmake  Utils.cmake
cmake/find/: FindACE.cmake  FindOpenSSL.cmake  FindTBB.cmake  FindTBBMalloc.cmake
config/: CMakeLists.txt  CopyConfig.cmake  README.md  choose.rb
contrib/vmap_extract_assembler_bin/: makevmaps_SIMPLE.bat
dep/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt  Global_Macros.h  OS_NS_sys_stat.cpp  Reactor.h  Task.h  WFMO_Reactor.h  config-macros.h
dep/acelite/ace/PrecompiledHeaders/: WinAcePCH.cpp
dep/include/g3dlite/G3D/: debug.h  g3dmath.h  platform.h
dep/src/g3dlite/: Any.cpp  CMakeLists.txt  RegistryUtil.cpp  System.cpp  debugAssert.cpp
dep/tbb/: CMakeLists.txt
dep/tbbmalloc/: CMakeLists.txt
dep/tbbmalloc/def/: win32-gcc.def
dep/tbbmalloc/src/: frontend.cpp  itt_notify.cpp  proxy.h  tbbmalloc.cpp
dep/tbbmalloc/tbb/: scalable_allocator.h  tbb_config.h
dep/tbbmalloc/tbb/internal/: _tbb_windef.h
doc/: INSTALL.html  INSTALL.md  README.md  doc.rb
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/Platform/: Define.h
src/game/: CMakeLists.txt  CharacterHandler.cpp  Creature.cpp  Creature.h  Formulas.h  GridNotifiers.h  GridNotifiersImpl.h  Group.cpp  Level0.cpp  LootHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  Object.cpp  Object.h  Player.cpp  Player.h  ReputationMgr.cpp  SocialMgr.cpp  Spell.cpp  Spell.h  SpellAuras.cpp  Unit.cpp  Unit.h  WorldSession.h  WorldSocket.cpp  debugcmds.cpp
src/game/vmap/: VMapTools.h
src/mangosd/: CMakeLists.txt  Main.cpp
src/realmd/: AuthSocket.cpp  CMakeLists.txt  Main.cpp
src/scripts/: CMakeLists.txt  MemoryManagement.cpp  ScriptMgr.cpp  config.h
src/scripts/include/: main.cpp  precompiled.h
src/scripts/scripts/eastern_kingdoms/blackrock_depths/: blackrock_depths.cpp
src/scripts/scripts/kalimdor/: tanaris.cpp
src/scripts/system/: MangosdRev.cpp
src/shared/: CMakeLists.txt  ServiceWin32.cpp  SystemConfig.h.in  WheatyExceptionReport.cpp
src/shared/Database/: DatabaseMysql.h  QueryResultMysql.h
